--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -5,15 +5,37 @@
         <h1>Luke's Famous Pancakes</h1>
         <meta charset="UTF-8">
         <img src="pancakes.jpg" alt="delicious pancake breakfast">
-        <h3> <ol>In a large bowl sift together the flour, 
-            baking powder, salt, and sugar.  
-            Make a well in the center and pour 
-            in milk, egg, melted butter.  
-            Mix until smooth.</ol>
-            <ol>Heat a lightly oiled griddle/frying pan over medium
-                 high heat.  Pour or scoop batter.</ol></h3>
+        <h3> <p>Your ticket to breakfast happiness. 
+                Just like Grandma used to make.</p> </h3>
+
+                  <ul>
+                   <li> 1.5 cups flour</li> 
+                   <li>3.5 teaspoons baking powder</li>
+                   <li>1 teaspoon salt </li>
+                   <li>tablespoon white sugar </1i> 
+                   <li>1.25 cups milk </li>
+                   <li>egg</li> 
+                   <li> 3 tablespoons butter</li>
+                   </ul>
+
+                  <ol> <li> <h5>Mix Dry Ingredients</h5>
+                     <p> In a large bowl sift together the flour, 
+                        baking powder, salt, and sugar. </p></li> 
+                        <li><h5>Mix In Wet Ingredients</h5>
+                        <p>Make a well in the center of bowl and pour 
+                            in milk, egg, melted butter. Mix until smooth.</p></li>
+                        <li><h5>Prepare Griddle</h5>
+                            <p>Heat a lightly oiled griddle/frying pan over medium
+                                high heat.</p></li>
+                        <li><h5>Cook Pancakes</h5>
+                            <p>Pour or scoop batter onto hot griddle. 
+                                ~1/4 cup per pancake. Brown on both sides and 
+                                serve hot.</p></li>
+                  </ol>
+                  
     </head>
     <body>
-      
+        <ui><h3>Enjoy!</h3></ui>
+<img src="https://c.tenor.com/P_Rv3aswS_YAAAAd/eating-pancakes.gif"      alt="Attractive lady eating pancakes">
     </body>
 </html>
